Bug 386368 - Links in HTML emails broken by escaped ampersands
Summary: Links in HTML emails broken by escaped ampersands
Status: RESOLVED FIXED
Alias: None
Product: kmail2
Classification: Applications
Component: general (other bugs)
Version First Reported In: 5.6.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-10-30 16:09 UTC by spamme
Modified: 2017-10-31 07:08 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.6.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description spamme 2017-10-30 16:09:49 UTC
In HTML emails KMail escapes ampersands, i.e., replaces them with "&" in link URLs and breaks these links.

For instance:

 <a href="mailto:abc@domain.com?subject=Email&body=ABC123">Send email</a>

becomes

 <a href="mailto:abc@domain.com?subject=Email&amp;body=ABC123">Send email</a>

In this particular case clicking on the link will create a new email with subject "Email", but the body will not contain "ABC123" as it should.
Comment 1 spamme 2017-10-30 16:18:26 UTC
Problem occurs both in Debian 9 stable (stretch) and in Arch Linux using 5.6.2.
Comment 2 Laurent Montel 2017-10-31 07:08:50 UTC
Git commit 2ed33b9fcd46334b4c7867a2f3a9e34e57282e8d by Montel Laurent.
Committed on 31/10/2017 at 07:08.
Pushed by mlaurent into branch 'Applications/17.08'.

Fix Bug 386368 - Links in HTML emails broken by escaped ampersands

FIXED-IN: 5.6.3

M  +7    -0    templateparser/src/templateparserjob.cpp

https://commits.kde.org/messagelib/2ed33b9fcd46334b4c7867a2f3a9e34e57282e8d