Fix Bug 386368 - Links in HTML emails broken by escaped ampersands

FIXED-IN: 5.6.3
BUG: 386368