templateparser/src/templateparserjob.cpp
@@ -1184,6 +1184,13 @@ void TemplateParserJob::slotExtractInfoDone(const TemplateParserExtractHtmlInfoR
     } else {
         makeValidHtml(htmlBody);
     }
+    if (mMode == NewMessage && plainBody.isEmpty() && !mExtractHtmlInfoResult.mPlainText.isEmpty()) {
+        plainBody = mExtractHtmlInfoResult.mPlainText;
+    }
+    if (mMode == NewMessage && htmlBody.isEmpty() && !mExtractHtmlInfoResult.mHtmlElement.isEmpty()) {
+        htmlBody = mExtractHtmlInfoResult.mHtmlElement;
+    }
+
     addProcessedBodyToMessage(plainBody, htmlBody);
     Q_EMIT parsingDone(mForceCursorPosition);
 }
